# todo-cli

./: README.md
todo-cli/: LICENSE.txt  README.md  pyproject.toml
todo-cli/src/todo_cli/: core.py  main.py
todo-cli/src/todo_cli.egg-info/: PKG-INFO  SOURCES.txt
todo-cli/todo_cli.egg-info/: SOURCES.txt
